# X11-Core

./: .gitignore  Dockerfile  Jenkinsfile  README.md  eslintrc.js  pylintrc.conf  scotty
install/: config.json  raspi-config  raspi_cam  raspi_i2c  raspi_rgpio  raspi_ssh  requirements-hw.txt  requirements.txt
ros/: .gitignore  README.md  compros.sh  piros.sh  reset_can.py
ros/launch/: run_all.launch  run_msurface.launch  run_rov.launch  run_rov_simple.launch  run_surface.launch  unit1.test
ros/src/can_com/: CMakeLists.txt  package.xml
ros/src/can_proc/: CMakeLists.txt  README.txt  package.xml
ros/src/control/: CMakeLists.txt  package.xml
ros/src/i2c_com/: CMakeLists.txt  README.txt  package.xml
ros/src/i2c_com/scripts/: BNO055.py  TYS01.py  i2c.py  ms5837.py  phSensorRos.py  phSensorScript.py
ros/src/i2c_proc/: CMakeLists.txt  package.xml
ros/src/imu/: imu.py
ros/src/mux_demux/: CMakeLists.txt  package.xml
ros/src/pwm_com/: CMakeLists.txt
ros/src/shared_msgs/: CMakeLists.txt  package.xml
ros/src/vision/: CMakeLists.txt  package.xml
ros/surface/src/: shared_msgs
rov/: JSToJSON.js  rov.py
rov/movement/controls/: Algorithm_Handler.py
rov/tests/: test_movement.py
surface/: .eslintignore  electron-setup.js  package.json  proxyinstall.sh  webpack.config.js
surface/frontend/: index.jsx  main.html  main.js
surface/pakfront/: pakfront.go
surface/socket_test/: js_socket.js  py_socket.py  py_socketio_unfinished.py  py_socketio_working.py
tests/: README.md  rovclass.py  rovcontroller.py  rovtest.py  rovtests.py  testem.py  tests.py
(+179 files in other folders)
